# redact-md

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
bench/results/: ambiguous_names.json  fast_tools.json  redact_api.json  rerun_15doc.json
bench/scripts/: evaluate.py  run_opf_api.py
bench/transcripts/: corpus.py
src/redact_md/: __init__.py
tests/: test_masking.py  test_redaction.py
