[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redact-md"
version = "0.1.0"
description = "Markdown-aware local PII redaction (Presidio + spaCy)"
requires-python = ">=3.10"
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7,<4.0",
]

[project.scripts]
redact-md = "redact_md:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
model = ["en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires the en_core_web_lg model (deselect with -m 'not integration')"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/redact_md"]
